
add_executable(co_yield_value_1 co_yield_value_1.cxx)
target_link_libraries(co_yield_value_1
    PRIVATE
    compiler_flags
    compiler_options
)

add_executable(co_yield_value_2 co_yield_value_2.cxx)
target_link_libraries(co_yield_value_2
    PRIVATE
    compiler_flags
    compiler_options
)

add_executable(co_yield_value_3 co_yield_value_3.cxx)
target_link_libraries(co_yield_value_3
    PRIVATE
    compiler_flags
    compiler_options
)

